test/conformance/chainsaw/validating-admission-policy-reports/background/policies-with-the-same-name/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-vpol-background
  labels:
    app: test
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: 'ghcr.io/kyverno/test-verify-image:unsigned'
