test/conformance/chainsaw/validating-admission-policy-reports/background/policies-with-the-same-name/deployment-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-vpol-background
