test/conformance/chainsaw/validating-admission-policy-reports/background/policies-with-the-same-name/validatingpolicy-assert.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: report-background-sample
status:
  conditionStatus:
    conditions:
    - message: Policy is ready for reporting.
      reason: Succeeded
      status: "True"
      type: RBACPermissionsGranted
    ready: true
